kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: food-delivery
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: food-backend
          image: haboubi/food-delivery-backend:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
      restartPolicy: Always
