kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: food-delivery
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: food-frontend
          image: haboubi/food-delivery-frontend:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
