kubernetes/sonarqube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: dev-tools
spec:
  selector:
    app: sonarqube
  ports:
    - protocol: TCP
      port: 9000       
      targetPort: 9000 
  type: NodePort
