kubernetes/food-delivery-food-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: food-delivery-food-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/food-delivery-food-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/food-delivery-food-network: "true"
